--- a/App/pyproject.toml
+++ b/App/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "pandas>=2.2.3",
+    "plotly>=6.0.0",
+    "reflex>=0.7.1",
+    "requests>=2.32.3",
+]
